[gd_scene load_steps=9 format=3 uid="uid://cw0meiasgss1q"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_oqqlg"]
[ext_resource type="FontFile" uid="uid://tt4u3fqh87lr" path="res://fonts/PixelatedLove/PixelatedLove/pixelated-loveNew.ttf" id="1_vv163"]
[ext_resource type="Texture2D" uid="uid://dvo4p5g8nf3qm" path="res://assets/27udgidl.bmp" id="2_dejbw"]
[ext_resource type="Script" path="res://scripts/menu_start_game.gd" id="2_osacb"]
[ext_resource type="Texture2D" uid="uid://d0eodype6qamr" path="res://assets/seaweed_cutout.png" id="5_tb3ak"]
[ext_resource type="Texture2D" uid="uid://cjjoodyxyslee" path="res://assets/tadpole_cutout.png" id="6_68ti4"]
[ext_resource type="Texture2D" uid="uid://8tfrbp5wx0s1" path="res://assets/pufferfish_cutout.png" id="7_w0ijg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qu4s5"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_oqqlg")

[node name="Sea" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -101.0
offset_right = 1188.0
offset_bottom = 820.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dejbw")

[node name="gameTitle" type="Label" parent="."]
offset_left = 184.0
offset_top = 64.0
offset_right = 967.0
offset_bottom = 239.0
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 64
text = "BIG FISH EAT SMALL FISH
BIG FISH GET BIGGER"
horizontal_alignment = 1

[node name="highscoreTitle" type="Label" parent="gameTitle"]
layout_mode = 0
offset_left = 280.0
offset_top = 192.0
offset_right = 504.0
offset_bottom = 235.0
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 32
text = "HIGH SCORES"
horizontal_alignment = 1

[node name="highscores1" type="Label" parent="."]
offset_left = 517.0
offset_top = 305.0
offset_right = 661.0
offset_bottom = 341.0
theme_override_constants/line_spacing = 4
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 24
text = "00000000"
horizontal_alignment = 1

[node name="highscores2" type="Label" parent="."]
offset_left = 517.0
offset_top = 341.0
offset_right = 661.0
offset_bottom = 377.0
theme_override_constants/line_spacing = 4
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 24
text = "00000000"
horizontal_alignment = 1

[node name="highscores3" type="Label" parent="."]
offset_left = 517.0
offset_top = 377.0
offset_right = 661.0
offset_bottom = 412.0
theme_override_constants/line_spacing = 4
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 24
text = "00000000"
horizontal_alignment = 1

[node name="highscores4" type="Label" parent="."]
offset_left = 516.0
offset_top = 413.0
offset_right = 662.0
offset_bottom = 452.0
theme_override_constants/line_spacing = 4
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 24
text = "00000000"
horizontal_alignment = 1

[node name="highscores5" type="Label" parent="."]
offset_left = 517.0
offset_top = 449.0
offset_right = 661.0
offset_bottom = 485.0
theme_override_constants/line_spacing = 4
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 24
text = "00000000"
horizontal_alignment = 1

[node name="highscoreslabel" type="Label" parent="."]
offset_left = 498.0
offset_top = 305.0
offset_right = 537.0
offset_bottom = 481.0
theme_override_constants/line_spacing = 4
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 24
text = "1.
2.
3.
4.
5."
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 480.0
offset_top = 512.0
offset_right = 672.0
offset_bottom = 576.0
theme_override_fonts/font = ExtResource("1_vv163")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxTexture_qu4s5")
text = "START"
script = ExtResource("2_osacb")

[node name="SeaweedCutout" type="Sprite2D" parent="."]
position = Vector2(180.083, 647.438)
scale = Vector2(0.250781, 0.312394)
texture = ExtResource("5_tb3ak")

[node name="SeaweedCutout2" type="Sprite2D" parent="."]
position = Vector2(320.181, 663.063)
scale = Vector2(0.209038, 0.420145)
texture = ExtResource("5_tb3ak")

[node name="TadpoleCutout" type="Sprite2D" parent="."]
position = Vector2(236.922, 541.75)
scale = Vector2(0.207823, 0.185039)
texture = ExtResource("6_68ti4")

[node name="SeaweedCutout3" type="Sprite2D" parent="."]
position = Vector2(227.783, 642.872)
scale = Vector2(0.17028, 0.45481)
skew = 0.143117
texture = ExtResource("5_tb3ak")

[node name="SeaweedCutout4" type="Sprite2D" parent="."]
position = Vector2(1030, 589.131)
scale = Vector2(0.176405, 0.408413)
texture = ExtResource("5_tb3ak")

[node name="SeaweedCutout5" type="Sprite2D" parent="."]
position = Vector2(980, 632)
scale = Vector2(0.18113, 0.291201)
skew = -0.178024
texture = ExtResource("5_tb3ak")

[node name="SeaweedCutout6" type="Sprite2D" parent="."]
position = Vector2(712, 658)
scale = Vector2(0.166554, 0.291237)
skew = 0.20944
texture = ExtResource("5_tb3ak")

[node name="PufferfishCutout" type="Sprite2D" parent="."]
position = Vector2(1039, 235)
scale = Vector2(0.151091, 0.145008)
texture = ExtResource("7_w0ijg")
flip_h = true

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
